<resources>
    <string name="app_name">不许无聊</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_share">分享</string>
    <string name="app">应用</string>
    <string name="clear_cache">清除缓存</string>
    <string name="text_advice">提交bug或意见</string>
    <string name="advice">应用反馈</string>
    <string name="text_about">联系作者</string>
    <string name="text_github">GitHub地址</string>
    <string name="github_address">zyascend.github.com/NoBoring</string>
    <string name="ad_email">邮件：1334553391@qq.com</string>
    <string name="adress_weibo">微博：weibo.com/zyascend</string>
    <string name="author">作者</string>
    <string name="tag">TAG</string>
    <string name="fresh">新鲜事</string>
    <string name="joke">段子</string>
    <string name="meizhi">妹纸</string>
    <string name="weixin">微信精选</string>
    <string name="noPic">无图模式</string>
    <string name="nightMode">夜间模式</string>
    <string name="noboring">NoBoring</string>
    <string name="version">V 2.0.0</string>
    <string name="laodingError">加载出错了⊙︿⊙</string>
    <string name="error_retry">加载出错了0_0,请点击重试</string>
    <string name="share">分享</string>
    <string name="save">保存</string>
    <string name="chucuo">出错了( ＞ω＜)</string>
    <string name="nomore">没有了⊙︿⊙</string>
    <string name="loading">加载中...</string>
    <string name="app_des">生活从不无聊</string>
    <string name="num_zero">0</string>
    <string name="text_detail">详情</string>
    <string name="text_saysomething">说点什么吧...</string>
    <string name="text_send">发送</string>
    <string name="text_news">最新</string>
    <string name="hotest">最热</string>
    <string name="text_allComments">全部评论</string>
    <string name="text_input_title">输入标题...</string>
    <string name="text_input_content">输入内容...</string>
    <string name="delete_pic">撤销图片</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="jumpLogin">随便看看</string>
    <string name="error_invalid_password">密码应不少于6位</string>
    <string name="loginng">登录中...</string>
    <string name="cant_null">标题或内容不可为空</string>
    <string name="noMore20">标题长度不可超过20</string>
    <string name="publishing">发布中...</string>
    <string name="pleaseLogin">请登录...</string>
    <string name="follow">关注</string>
    <string name="fans">粉丝</string>
    <string name="myInfo">我的资料</string>
    <string name="myCircle">我的帖子</string>
    <string name="myLikes">我的点赞</string>
    <string name="my">我的</string>
    <string name="email">邮箱地址</string>
    <string name="post">帖子</string>
    <string name="follower">关注者</string>
    <string name="followee">关注</string>
    <string name="editProfile">编辑资料</string>
    <string name="download">下载</string>
</resources>
