<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_news"
            android:icon="@drawable/ic_read"
            android:title="@string/fresh" />
        <item
            android:id="@+id/menu_joke"
            android:icon="@drawable/ic_joke"
            android:title="@string/joke" />
        <item
            android:id="@+id/menu_girl"
            android:icon="@drawable/ic_girl"
            android:title="@string/meizhi" />
        <item
            android:id="@+id/menu_wechat"
            android:icon="@drawable/ic_wechat"
            android:title="@string/weixin" />
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/menu_noPic"
                android:icon="@drawable/ic_photo"
                android:title="@string/noPic"
                app:actionLayout="@layout/action_picswitch"/>
            <item
                android:id="@+id/menu_night"
                android:icon="@drawable/ic_night"
                android:title="@string/nightMode"
                app:actionLayout="@layout/action_nightswitch"/>
        </menu>
    </item>

</menu>
