<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="?containerBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:title="@string/text_detail"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:background="?containerBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_margin="10dp"
                android:id="@+id/ed_title"
                android:hint="@string/text_input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:gravity="top"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/ed_content"
                android:layout_below="@+id/ed_title"
                android:hint="@string/text_input_content"
                android:layout_width="match_parent"
                android:minHeight="200dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_below="@+id/ed_content"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <ImageView
                    android:src="@drawable/ic_add"
                    android:id="@+id/pic1"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <ImageView
                    android:src="@drawable/ic_add"
                    android:id="@+id/pic2"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
                <ImageView
                    android:src="@drawable/ic_add"
                    android:id="@+id/pic3"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_addPic"
            android:src="@drawable/ic_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_delete_pic"
            android:visibility="visible"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:textColor="?textColor"
            android:text="@string/delete_pic"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>