<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:background="?cardBackground"
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <!--app:layout_scrollFlags="scroll|enterAlways"-->
        <android.support.design.widget.CollapsingToolbarLayout
            app:titleEnabled="false"
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <LinearLayout
                android:id="@+id/ll_parent"
                android:paddingTop="?attr/actionBarSize"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_headPic"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="15dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_postCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textColor="?attr/titleColor"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:text="0" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/post"
                                android:textColor="?attr/textColor"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_followerCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textColor="?attr/titleColor"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:text="1" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/follower"
                                android:textColor="?attr/textColor"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_followeeCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:textColor="?attr/titleColor"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                android:text="1" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/followee"
                                android:textColor="?attr/textColor"
                                android:textSize="16sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/btn_operate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/bg_btn_round"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:text="@string/editProfile"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:gravity="center_vertical"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="#ffffff" />
        </android.support.design.widget.CollapsingToolbarLayout>
        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:scaleType="fitCenter"
                android:id="@+id/btn_grid"
                android:src="@drawable/ic_grid_24dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <ImageView
                android:scaleType="center"
                android:id="@+id/btn_List"
                android:src="@drawable/ic_list_24dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->

    <RelativeLayout
        android:background="?cardBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <include layout="@layout/view_empty"/>
    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>
